Creation main.js avec le chargement laby et jeremy

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 		<meta charset="utf-8" />
 		<title>JeremyEscape</title>	
 		<link rel="stylesheet" href="style.css" />
+		<script  type ="text/javascript" src="labyrinthe.js"></script>
+		<script  type ="text/javascript" src="main.js"></script>
+		<script  type ="text/javascript" src="jeremyIA.js"></script>
+	
 	</head>
 	<body>
 		<canvas id="mon_canvas"> 
@@ -13,5 +17,4 @@
 		
 	</body>
 	<!-- Chargement des scripts-->
-	<script  type ="text/javascript" src="labyrinthe.js"></script>
 </html>
