--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 ﻿<!DOCTYPE html>
 
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<title>JeremyEscape</title>	
-		<link rel="stylesheet" href="style.css" />
-		<script  type ="text/javascript" src="labyrinthe.js"></script>
-		<script  type ="text/javascript" src="main.js"></script>
-		<script  type ="text/javascript" src="jeremyIA.js"></script>
-	
-	</head>
-	<body>
-		<canvas id="mon_canvas"> 
-			Votre navigateur ne supporte pas la balise canvas
-		</canvas>
-		
-	</body>
-	<!-- Chargement des scripts-->
+    <head>
+        <meta charset="utf-8" />
+        <title>JeremyEscape</title>	
+        <link rel="stylesheet" href="style.css" />
+
+
+    </head>
+    <body>
+        <canvas id="mon_canvas"> 
+            Votre navigateur ne supporte pas la balise canvas
+        </canvas>
+        <h1> JeremyEscape </h1>
+        <section>
+            <p>En hommage à notre cher Jérémie Bernard, un jeu dédié pour toi... on ne peut vraiment pas se passer de toi (pourtant ce n'est pas l'envie qui nous manque :P)  </p>
+        </section>
+        
+        
+        <footer class ="footer">CC - BY Gaëtan JACQUEMIN <br/>  Jonathan CHHAY <br/> Thomas Alves <br/> </footer>
+    </body>
+    <!-- Chargement des scripts-->
 </html>
