Jeu separé game.html

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 		<link rel="stylesheet" href="style.css" />
 		<script  type ="text/javascript" src="labyrinthe.js"></script>
 		<script  type ="text/javascript" src="main.js"></script>
-		<script  type ="text/javascript" src="jeremyIA.js"></script>
+		<script  type ="text/javascript" src="jeremy/jeremy.js"></script>
 	
 	</head>
 	<body>
-		<canvas id="mon_canvas"> 
+		<canvas id="board"> 
 			Votre navigateur ne supporte pas la balise canvas
 		</canvas>
 		
