--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-bonjour
+﻿<!DOCTYPE html>
+
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<title>JeremyEscape</title>	
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<canvas id="mon_canvas"> 
+			Votre navigateur ne supporte pas la balise canvas
+		</canvas>
+		<button id="haut" onclick="haut()"></button>
+		<button id="gauche" onclick="gauche()"></button>
+		<button id="droite" onclick="droite()"></button> 
+		<button id="bas" onclick="bas()"></button>
+		
+		
+	</body>
+	<!-- Chargement des scripts-->
+	<script  type ="text/javascript" src="labyrinthe.js"></script>
+</html>
