Jeremy bouge ! Mais que allez retours...

--- a/game.html
+++ b/game.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<title>JeremyEscape</title>	
-		<link rel="stylesheet" href="style.css" />
-		<script  type ="text/javascript" src="labyrinthe.js"></script>
-		<script  type ="text/javascript" src="main.js"></script>
-		<script  type ="text/javascript" src="jeremy/jeremy.js"></script>
-	
-	</head>
-	<body>
-		<canvas id="board"> 
+<head>
+<meta charset="utf-8" />
+<title>JeremyEscape</title>
+<link rel="stylesheet" href="style.css" />
+<script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
+<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/2.2.2/isotope.pkgd.js"></script>
+
+<script type="text/javascript" src="labyrinthe.js"></script>
+<script type="text/javascript" src="main.js"></script>
+<script type="text/javascript" src="jeremy/jeremy.js"></script>
+
+</head>
+<body>
+	<canvas id="board"> 
 			Votre navigateur ne supporte pas la balise canvas
 		</canvas>
-		
-	</body>
-	<!-- Chargement des scripts-->
+
+</body>
+<!-- Chargement des scripts-->
 </html>
